# hass-integration-tesmart-kvm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  Taskfile.yml  docker-compose.yml  hacs.json  pyproject.toml
.github/workflows/: ci.yml  validate.yml
custom_components/tesmart_kvm/: __init__.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  select.py  strings.json  switch.py
custom_components/tesmart_kvm/translations/: en.json
tests/: __init__.py  conftest.py  test_client.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entity.py  test_init.py  test_select.py  test_switch.py
