[project]
name = "ha-tesmart-kvm-integration"
version = "0.1.0"
description = "Home Assistant custom integration for TESmart KVM switches"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-homeassistant-custom-component>=0.13",
    "pre-commit>=4.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
